--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,9 @@ font-size:12px;
 				<br>
 				<h1>You got kicked!</h1><br>
 				<br>
-				<b>Why? </b><span id="ban_reason"></span><br>
+				You may have been kicked by an admin, or if it was a private room, the room owner.<br>
+                <h3>Kicked by <font id="kicked_by">???</font></h3><br>
+                <a href="/">Reload</a>
 			</div>
 		</div>
 
